plugins {
    id 'org.sonarqube' version '7.3.1.8318'
}

group = 'com.frees'

// Derive the version from git for traceability: a tag if one exists, otherwise
// the short commit (with '-dirty' when the tree has local changes). Falls back
// to a static version when git is unavailable — e.g. the Docker build context
// excludes '.git' (see backend/Dockerfile), so the build must not depend on it.
def freesVersion = {
    try {
        def described = providers.exec {
            commandLine 'git', 'describe', '--tags', '--always', '--dirty'
            it.ignoreExitValue = true
        }.standardOutput.asText.get().trim()
        return described ? described : '0.0.1'
    } catch (Exception ignored) {
        return '0.0.1'
    }
}()

subprojects {
    apply plugin: 'java'

    group = rootProject.group
    version = freesVersion

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }

    // Lock dependency versions (gradle.lockfile) so builds are reproducible.
    dependencyLocking {
        lockAllConfigurations()
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        maxHeapSize = "2g"
    }
}

// CI-based SonarCloud scan covering the whole repository in one project:
// Java is analyzed with bytecode here (automatic analysis cannot do that),
// and the frontend, Dockerfiles and CI workflows are swept into the same scan.
//
// This is a multi-module Gradle build (:core, :web); the sonarqube plugin
// auto-detects each subproject and scans it as its own hierarchical sonar
// module, auto-wiring sonar.sources/sonar.tests/sonar.java.binaries from that
// subproject's own sourceSets — do NOT also declare backend/core or
// backend/web java paths here, that double-indexes every Java file (and,
// if worked around via `skipProject`, drops the auto-wired java.binaries,
// which then hard-fails the Java sensor). Only the non-Java parts of the
// repo (frontend, Dockerfiles, compose, CI) need to be declared explicitly.
sonar {
    properties {
        property 'sonar.projectKey', 'ernsoylu_frEES'
        property 'sonar.organization', 'ernsoylu'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.projectBaseDir', "${projectDir}/.."
        property 'sonar.sources', 'frontend/src,backend/Dockerfile,frontend/Dockerfile,docker-compose.yml,.github/workflows'
        property 'sonar.exclusions', '**/node_modules/**,**/build/**,**/dist/**'
        // HelpPage.tsx, examples.ts and functionCatalog.ts are declarative
        // content: the duplication detector anonymizes string literals, so their
        // distinct example listings / catalog entries register as false-positive
        // duplicate blocks.
        property 'sonar.cpd.exclusions', 'frontend/src/HelpPage.tsx,frontend/src/examples.ts,frontend/src/functionCatalog.ts'
        property 'sonar.coverage.jacoco.xmlReportPaths',
                "${projectDir}/core/build/reports/jacoco/test/jacocoTestReport.xml,${projectDir}/web/build/reports/jacoco/test/jacocoTestReport.xml"
        // Coverage exclusions: the frontend (tested separately) and backend
        // infrastructure glue that is integration-/native-bound rather than unit
        // testable — async messaging (RabbitMQ) and the job store/dispatcher,
        // Spring @Configuration beans, the REST job controller, the app entry
        // point, and the raw JNA/native SUNDIALS-IDA bindings.
        property 'sonar.coverage.exclusions', 'frontend/**/*,frontend/src/**/*,**/frontend/**/*,backend/Dockerfile,frontend/Dockerfile,docker-compose.yml,.github/workflows/**/*,backend/core/src/main/java/com/frees/backend/compute/**,backend/web/src/main/java/com/frees/backend/compute/**,backend/web/src/main/java/com/frees/backend/config/**,backend/web/src/main/java/com/frees/backend/FreesBackendApplication.java,backend/web/src/main/java/com/frees/backend/api/JobController.java,backend/core/src/main/java/com/frees/backend/core/dae/SundialsIda.java,backend/core/src/main/java/com/frees/backend/core/dae/IdaDaeSolver.java'
    }
}
